--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/bootstrap.rtl.min.css">
-    <link rel="stylesheet" href="assets/css/style,.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.rtl.min.css">
+    <link rel="stylesheet" href="./assets/css/style,.css">
     <title>CommentBox</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div class="card">
                     <div class="profile">
                         <div class="imgBx">
-                            <img class="p-1" src="/img/1.jpg">
+                            <img class="p-1" src="./img/1.jpg">
                         </div>
                         <div>
                             <h3>سهیلا</h3>
@@ -34,7 +34,7 @@
                 <div class="card">
                     <div class="profile">
                         <div class="imgBx">
-                            <img class="p-1" src="/img/2.jpg">
+                            <img class="p-1" src="./img/2.jpg">
                         </div>
                         <div>
                             <h3>امین</h3>
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="profile">
                         <div class="imgBx">
-                            <img class="p-1" src="/img/1.jpg">
+                            <img class="p-1" src="./img/1.jpg">
                         </div>
                         <div>
                             <h3>سارا</h3>
@@ -76,7 +76,7 @@
                 <div class="card">
                     <div class="profile">
                         <div class="imgBx">
-                            <img class="p-1" src="/img/2.jpg">
+                            <img class="p-1" src="./img/2.jpg">
                         </div>
                         <div>
                             <h3>امیرعلی</h3>
@@ -99,17 +99,17 @@
             </div>
             <div class="sidebar">
                 <div class="arrowBx up-arrow">
-                    <img src="/img/arrow-up.png" id="upArrow">
+                    <img src="./img/arrow-up.png" id="upArrow">
                 </div>
                 <div class="arrowBx down-arrow">
-                    <img src="/img/arrow-down.png" id="downArrow">
+                    <img src="./img/arrow-down.png" id="downArrow">
                 </div>
             </div>
         </div>
     </div>
 
 
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/app.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
